Corrigida navegação entre telas e ajuste de botões

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mask-input": "^1.2.3",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
